--- a/My_Social_Project/templates/App_Login/signup.html
+++ b/My_Social_Project/templates/App_Login/signup.html
@@ -27,7 +27,7 @@
 
 <div>
 <div class="">
-    <p>Have an account? <a href="#">Login </a></p>
+    <p>Have an account? <a href="{% url 'App_Login:login' %}">Login </a></p>
 </div>
 
 
