--- a/My_Social_Project/templates/App_Login/navbar.html
+++ b/My_Social_Project/templates/App_Login/navbar.html
@@ -3,7 +3,7 @@
         <title> {% block title_block %} Social {% endblock %} </title>
         
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-        <link href="https://fonts.googleapis.com/css2?family=Anton&family=Noticia+Text&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
             {% block css_block %}
             {% endblock %}
 
@@ -11,8 +11,7 @@
 
     </head>
 
-    <body style="font-family: 'Anton', sans-serif;
-font-family: 'Noticia Text', serif;">
+    <body>
         <div class="mynav">
                 <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <a class="navbar-brand" href="#">Navbar</a>
