--- a/My_Social_Project/templates/App_Login/profile.html
+++ b/My_Social_Project/templates/App_Login/profile.html
@@ -1,4 +1,32 @@
-{% extends 'navbar.html' %}
+{% extends 'App_Login/navbar.html' %}
 {% load static %}  
 {% load crispy_forms_tags%}
 {% block title_block %} {{title}} {% endblock %}
+{% block css_block%} 
+    <style>
+            .edit_profile{
+               font-family: 'Roboto Condensed', sans-serif;
+
+            }
+        </style>
+
+
+ {% endblock %}
+    
+
+{% block body_block %}
+<center>
+<div class="edit_profile">
+    <h3 class="display-4">Edit Profile {{c_user}}</h3>
+ <form method="POST" enctype="multipart/form-data">
+        {{form|crispy}}
+        {% csrf_token %}
+  <button type="submit" name="button" class='btn btn-primary'>Submit</button>
+</form>
+
+<div>
+
+
+</center>
+
+{% endblock %}
