--- a/My_Social_Project/templates/base.html
+++ b/My_Social_Project/templates/base.html
@@ -4,7 +4,7 @@
         
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
-        
+        <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
             {% block css_block %}
             {% endblock %}
 
@@ -13,6 +13,15 @@
     </head>
 
     <body>
+        <center>
+            <div class="logo display-1"  style="font-family: 'Pacifico', cursive;">
+                Insta BD
+            </div>
+            <blockquote class="blockquote">
+                
+                <footer class="blockquote-footer">Express Yourself </footer>
+            </blockquote>
+        </center>
         <div class="container" style="padding-top:30px">
             {% block body_block %}
             {% endblock %}
