--- a/My_Social_Project/templates/App_Login/navbar.html
+++ b/My_Social_Project/templates/App_Login/navbar.html
@@ -4,6 +4,7 @@
         
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">    
             {% block css_block %}
             {% endblock %}
 
@@ -14,7 +15,7 @@
     <body>
         <div class="mynav">
                 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <a class="navbar-brand" href="#">Navbar</a>
+                <a class="navbar-brand" style="font-family: 'Pacifico', cursive;" href="#">Insta BD</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -43,9 +44,9 @@
                     </li>
                     <li class="nav-item">
                         {% if user.user_profile.profile_pic %}
-                        <a class="nav-link " style="border:1px solid #555;;margin-left:10px"  href="#"><img style="width:24px;" class="rounded-circle" src="/media/{{user.user_profile.profile_pic}}" </a>
+                        <a class="nav-link " style="border:1px solid #555;;margin-left:10px"  href="{% url 'App_Login:profile'%}"><img style="width:24px;" class="rounded-circle" src="/media/{{user.user_profile.profile_pic}}" </a>
                         {% else %}
-                        <a class="nav-link " style="border:1px solid #555;margin-left:10px;"  href="#"><img style="width:24px;" class="rounded-circle" src="/media/default.png"></a>
+                        <a class="nav-link " style="border:1px solid #555;margin-left:10px;"  href="{% url 'App_Login:profile'%}"><img style="width:24px;" class="rounded-circle" src="/media/default.png"></a>
                         {% endif %}
                     </li>
                     
