--- a/My_Social_Project/templates/App_Login/navbar.html
+++ b/My_Social_Project/templates/App_Login/navbar.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">    
+        <link href="https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz:wght@500&display=swap" rel="stylesheet">
             {% block css_block %}
             {% endblock %}
 
@@ -21,7 +22,7 @@
                 </button>
 
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav mr-auto">
+                    <ul class="navbar-nav mr-auto" style="font-family: 'Yanone Kaffeesatz', sans-serif;>
                     <li class="nav-item active">
                         <a class="nav-link" href="{% url "App_Posts:home" %}">Home <span class="sr-only">(current)</span></a>
                     </li>
@@ -40,13 +41,13 @@
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link btn btn-outline-danger" style="border:1px solid #555;"  href="{% url 'App_Login:logout' %}">Logout</a>
+                        <a class="nav-link btn btn-outline-danger"   href="{% url 'App_Login:logout' %}">Logout</a>
                     </li>
                     <li class="nav-item">
                         {% if user.user_profile.profile_pic %}
-                        <a class="nav-link " style="border:1px solid #555;;margin-left:10px"  href="{% url 'App_Login:profile'%}"><img style="width:24px;" class="rounded-circle" src="/media/{{user.user_profile.profile_pic}}" </a>
+                        <a class="nav-link " style="margin-left:10px"  href="{% url 'App_Login:profile'%}"><img style="width:24px;" class="rounded-circle" src="/media/{{user.user_profile.profile_pic}}" </a>
                         {% else %}
-                        <a class="nav-link " style="border:1px solid #555;margin-left:10px;"  href="{% url 'App_Login:profile'%}"><img style="width:24px;" class="rounded-circle" src="/media/default.png"></a>
+                        <a class="nav-link " margin-left:10px;"  href="{% url 'App_Login:profile'%}"><img style="width:24px;" class="rounded-circle" src="/media/default.png"></a>
                         {% endif %}
                     </li>
                     
@@ -55,7 +56,7 @@
                     </ul>
                     <form class="form-inline my-2 my-lg-0">
                     <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                    <button class="btn btn-outline-success my-2 my-sm-0" style="font-family: 'Yanone Kaffeesatz', sans-serif; type="submit">Search</button>
                     </form>
                 </div>
                 </nav>    
@@ -63,7 +64,7 @@
         </div>
 
         <div class="container" style="padding-top:30px;font-family: 'Anton', sans-serif;
-font-family: 'Noticia Text', serif;">
+        font-family: 'Noticia Text', serif;">
             {% block body_block %}
             {% endblock %}
         </div>
