--- a/My_Social_Project/templates/App_Login/profile.html
+++ b/My_Social_Project/templates/App_Login/profile.html
@@ -21,7 +21,7 @@
  <form method="POST" enctype="multipart/form-data">
         {{form|crispy}}
         {% csrf_token %}
-  <button type="submit" name="button" class='btn btn-primary'>Submit</button>
+  <button type="submit" name="button" class='btn btn-primary btn-lg'>Submit</button>
 </form>
 
 <div>
