--- a/My_Social_Project/templates/App_Login/user.html
+++ b/My_Social_Project/templates/App_Login/user.html
@@ -1,20 +1,41 @@
 {% extends 'App_Login/navbar.html' %}
 {% load static %}  
 {% load crispy_forms_tags%}
-{% block title_block %} {{user.user_profile.full_name}} - @{{user.user_profile.user}} {% endblock %}
+{% block title_block %} {{title}} {% endblock %}
 {% block css_block%} 
+<style>
+  .crop {
+    width: 200px;
+    height: 200px;
+    overflow: hidden;
+  }
 
-{% endblock %}
-{% block body_block %}
+  .crop img {
+    width: 400px;
+    height: 300px;
+    margin: -75px 0 0 -100px;
+  }
+</style>
+{% endblock%}
+
+{%block body_block%}
 <div class="row">
-<div class="col-sm-4">
-{% if user.user_profile.profile_pic %}
-   <img style="width:250px;" class="rounded-circle" src="/media/{{user.user_profile.profile_pic}}"
-{% else %}
-   <img style="width:250px;" class="rounded-circle" src="/media/default.png">
-{% endif %}
+  <div class="col-sm-4">
+    {% if user.user_profile.profile_pic %}
+    <img src="/media/{{user.user_profile.profile_pic}}" width="250px" height="250px" class="rounded-circle">
+    {% else %}
+    <img src="/media/default.png" width="250px" height="250px" class="rounded-circle">
+    {% endif %}
+  </div>
+  <div class="col-sm-8 container">
+    <center><h1 style="font-family: 'Yanone Kaffeesatz', sans-serif;">{{user.user_profile}}</center><a href="{% url 'App_Login:edit' %}" class="btn btn-outline-success btn-lg">Edit Profile</a></h1>
+    <br>
+    <br>
+    <h4 style="font-family: 'Yanone Kaffeesatz', sans-serif;">{{user.post.count}} posts &nbsp; &nbsp; {{user.following.count}} followers &nbsp; &nbsp; {{user.follower.count}} following</h4>
+    <br>
+    <h3 style="font-family: 'Yanone Kaffeesatz', sans-serif;">{{user.user_profile.full_name}}</h3>
+    <p>{{user.user_profile.description|linebreaks}}</p>
+  </div>
 </div>
-
-<div class="col-sm-8">
-</div>
-{% endblock %}
+<hr>
+{% endblock%}
