--- a/My_Social_Project/templates/App_Login/user.html
+++ b/My_Social_Project/templates/App_Login/user.html
@@ -35,7 +35,35 @@
     <br>
     <h3 style="font-family: 'Yanone Kaffeesatz', sans-serif;">{{user.user_profile.full_name}}</h3>
     <p>{{user.user_profile.description|linebreaks}}</p>
+    <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+    New Post
+    </button>
+
   </div>
 </div>
 <hr>
+<div id="myModal" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+      <h4 class="modal-title display-4" style="font-family: 'Yanone Kaffeesatz', sans-serif;">Post A Photo </h4> 
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+       
+      </div>
+      <div class="modal-body">
+        {% comment %} form goes here {% endcomment %}
+        <form method="POST" enctype="multipart/form-data">
+               {{form|crispy}}
+            {% csrf_token %}
+        <input type="submit" class="btn btn-info btn-lg" value="post">
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-danger btn-sm" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+
+  </div>
+</div>
 {% endblock%}
