--- a/My_Social_Project/templates/App_Login/user.html
+++ b/My_Social_Project/templates/App_Login/user.html
@@ -5,15 +5,23 @@
 {% block css_block%} 
 <style>
   .crop {
-    width: 200px;
-    height: 200px;
+    width: 300px;
+    height: 300px;
     overflow: hidden;
   }
 
   .crop img {
-    width: 400px;
-    height: 300px;
-    margin: -75px 0 0 -100px;
+    border: 5px solid #ddd;
+    border-radius: 9px;
+    padding: 7px;
+    width: 300px;
+
+    div.polaroid {
+  width: 80%;
+  background-color: white;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  margin-bottom: 25px;
+    }
   }
 </style>
 {% endblock%}
@@ -65,5 +73,13 @@
     </div>
 
   </div>
+</div>
+
+<div class="row">
+    {% for post in user.post.all%}
+        <div class="crop">
+            <img  src="/media/{{post.image}}" alt="{{post.caption}}">
+        </div>
+    {% endfor %}
 </div>
 {% endblock%}
