--- a/My_Social_Project/templates/App_Login/navbar.html
+++ b/My_Social_Project/templates/App_Login/navbar.html
@@ -22,41 +22,27 @@
                 </button>
 
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav mr-auto" style="font-family: 'Yanone Kaffeesatz', sans-serif;>
-                    <li class="nav-item active">
+                    <ul class="navbar-nav mr-auto" style="font-family: 'Yanone Kaffeesatz', sans-serif;">
+                    <li class="nav-item ">
                         <a class="nav-link" href="{% url "App_Posts:home" %}">Home <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Dropdown
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Something else here</a>
-                        </div>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link btn btn-outline-danger"   href="{% url 'App_Login:logout' %}">Logout</a>
                     </li>
                     <li class="nav-item">
                         {% if user.user_profile.profile_pic %}
-                        <a class="nav-link " style="margin-left:10px"  href="{% url 'App_Login:profile'%}"><img style="width:24px;" class="rounded-circle" src="/media/{{user.user_profile.profile_pic}}" </a>
+                        <a class="nav-link " style="margin-left:10px"  href="{% url 'App_Login:profile'%}"><img style="width:24px;" class="rounded-circle" src="/media/{{user.user_profile.profile_pic}}"> </a>
                         {% else %}
-                        <a class="nav-link " margin-left:10px;"  href="{% url 'App_Login:profile'%}"><img style="width:24px;" class="rounded-circle" src="/media/default.png"></a>
+                        <a class="nav-link " style="margin-left:10px;"  href="{% url 'App_Login:profile'%}"><img style="width:24px;" class="rounded-circle" src="/media/default.png"></a>
                         {% endif %}
                     </li>
                     
 
-
                     </ul>
-                    <form class="form-inline my-2 my-lg-0">
-                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success my-2 my-sm-0" style="font-family: 'Yanone Kaffeesatz', sans-serif; type="submit">Search</button>
+
+                    <form class="form-inline my-2 my-lg-0" method="GET">
+                        <input class="form-control mr-sm-2" type="text" name="search" placeholder="Search Friend">
+                        <button class="btn btn-outline-success my-2 my-sm-0" style="font-family: 'Yanone Kaffeesatz', sans-serif;" type="submit">Search</button>
                     </form>
                 </div>
                 </nav>    
